<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.HomeFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/baby_blue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_expendable_card">
                    <TextView
                        android:id="@+id/tv_level1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_1_mengucap"
                        android:textSize="20sp"
                        android:fontFamily="@font/carter_one"
                        android:textStyle="bold"
                        tools:ignore="MissingConstraints" />
                    <ImageView
                        android:id="@+id/ic_dropdown_level_1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_dropdown_level_1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



                <View
                    android:id="@+id/divider_level1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_level1_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_1_desc"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/baby_blue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_expendable_card">
                    <TextView
                        android:id="@+id/tv_level2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_2_merangkai"
                        android:fontFamily="@font/carter_one"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="MissingConstraints" />
                    <ImageView
                        android:id="@+id/ic_dropdown_level_2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_dropdown_level_1"/>
                </androidx.constraintlayout.widget.ConstraintLayout>



                <View
                    android:id="@+id/divider_level2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_level2_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_2_desc"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_level3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/baby_blue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_expendable_card">
                    <TextView
                        android:id="@+id/tv_title_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level_3_menyusun"
                        android:fontFamily="@font/carter_one"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/ic_dropdown_level_3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_dropdown_level_1"/>
                </androidx.constraintlayout.widget.ConstraintLayout>



                <View
                    android:id="@+id/divider_level3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_level3_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_3_desc"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
